# sharh

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sharh/: expr.py  parser.py
tests/: test_parser.py
