[project]
name = "sharh"
description = "tiny dsl for lua-resty-expr"
version = "0.2.0"
dependencies = [
 "ply==3.11",
]
requires-python = ">= 3.9"
authors = [
 {name = "Kamyab Taghizadeh", email = "kamyab.zad@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/oktoze/sharh"
Repository = "https://github.com/oktoze/sharh.git"
Issues = "https://github.com/oktoze/sharh/issues"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
